add: log out and others
